# WQSurrogateModels

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
configs/: experiment_config.yaml  missing_indicator_config.yaml  missing_indicator_robustness_config.yaml  reduced_indicator_config.yaml  revision_missing_indicator_config.yaml
docs/: api-reference.md  data_preparation.md  experiment_protocol.md  fullstack-local-run.md  limitations.md  metrics.md  missing-indicator-core-experiments.md  missing-indicator-revision-experiments.md  missing-indicator-robustness-experiments.md  model-hyperparameters.md  model_card.md  original-benchmark-protocol.md  reduced-indicator-analysis.md  sample-size-experiments.md  statistical-analysis.md  watermirror-integration.md  wqi5-formula.md
models/: production_model_manifest.json
scripts/: export_missing_indicator_robustness_excel.py  finalize_revision_missing_indicator_outputs.py  generate_residual_plots.py  measure_missing_indicator_cpu_timing.py  prepare_missing_indicator_derived_outputs.py  prepare_revision_outputs.py  prepare_sample_size_outputs.py  prepare_statistics_outputs.py  reproduce_holdout_10714.py  reproduce_inference_10714.py  reproduce_reduced_indicators.py  reproduce_results.py  run_missing_indicator_experiments.py  run_missing_indicator_robustness_experiments.py  run_revision_missing_indicator_experiments.py  run_sample_size_experiments.py  run_stress107_event_windows.py
src/: api.py  enums.py  schemas.py  services.py  settings.py  wqi.py
(+45 files in other folders)
